[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-openenv"
version = "1.0.0"
description = "A real-world OpenEnv for training and evaluating agents on cloud infrastructure cost optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.6.4",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "openai==1.14.2"
]
